Fixed the CSS issue causing extra space at the bottom of maintenance backup dialog.

--- a/web/pgadmin/static/scss/_pgadmin.style.scss
+++ b/web/pgadmin/static/scss/_pgadmin.style.scss
@@ -264,7 +264,6 @@
 
 .obj_properties {
     padding: 0px;
-    height: 100%;
 }
 
 .obj_properties .pgadmin-control .uneditable-input {
